Fix display of chess LFA on smaller screens

--- a/More/Logfile Analyzer Styling Data.css
+++ b/More/Logfile Analyzer Styling Data.css
@@ -582,6 +582,7 @@
 			height: 50px;
 			border: 1px solid black;
 			background: contain;
+			background-repeat: no-repeat;
 		}
 			table.chess-table td.tile.top-edge {
 				border-top: 3px solid black;
